--- a/beacons/ranging.html
+++ b/beacons/ranging.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Ranging is a foreground only operation.  You can scan for &quot;all&quot; beacons with a particular filter set.  Meaning if you only filter by UUID, all beacons under that UUID will be returned.  With ranging, all of the identifier values are provided.  You are</p>
 <div class="tab-wrap">
-<input type="radio" id="5d0d9c8cf0ca4a13bae52be0f0cb6a9f-a2c6edb9f2c747cebd4f25d758284032" name="5d0d9c8cf0ca4a13bae52be0f0cb6a9f" class="tab" checked><label for="5d0d9c8cf0ca4a13bae52be0f0cb6a9f-a2c6edb9f2c747cebd4f25d758284032" >General</label>
-<input type="radio" id="5d0d9c8cf0ca4a13bae52be0f0cb6a9f-ab1271b2c0bd4b38b67f4beb5c70c3a4" name="5d0d9c8cf0ca4a13bae52be0f0cb6a9f" class="tab" ><label for="5d0d9c8cf0ca4a13bae52be0f0cb6a9f-ab1271b2c0bd4b38b67f4beb5c70c3a4" >Startup</label>
-<input type="radio" id="5d0d9c8cf0ca4a13bae52be0f0cb6a9f-b4c1dddb0a704f319d48e94ea57049dc" name="5d0d9c8cf0ca4a13bae52be0f0cb6a9f" class="tab" ><label for="5d0d9c8cf0ca4a13bae52be0f0cb6a9f-b4c1dddb0a704f319d48e94ea57049dc" >Android</label>
-<input type="radio" id="5d0d9c8cf0ca4a13bae52be0f0cb6a9f-1d1efb108d334db6998458d511efe77f" name="5d0d9c8cf0ca4a13bae52be0f0cb6a9f" class="tab" ><label for="5d0d9c8cf0ca4a13bae52be0f0cb6a9f-1d1efb108d334db6998458d511efe77f" >iOS</label>
+<input type="radio" id="bcbaf234d9df4dd3b75f536f70ad9423-42aa3b8fa76b485e87c780597f21cc60" name="bcbaf234d9df4dd3b75f536f70ad9423" class="tab" checked><label for="bcbaf234d9df4dd3b75f536f70ad9423-42aa3b8fa76b485e87c780597f21cc60" >General</label>
+<input type="radio" id="bcbaf234d9df4dd3b75f536f70ad9423-b184d79b4b144f6795c4fc78c42fc86a" name="bcbaf234d9df4dd3b75f536f70ad9423" class="tab" ><label for="bcbaf234d9df4dd3b75f536f70ad9423-b184d79b4b144f6795c4fc78c42fc86a" >Startup</label>
+<input type="radio" id="bcbaf234d9df4dd3b75f536f70ad9423-a0122e1fb04d4d7cb586baefea49cf6c" name="bcbaf234d9df4dd3b75f536f70ad9423" class="tab" ><label for="bcbaf234d9df4dd3b75f536f70ad9423-a0122e1fb04d4d7cb586baefea49cf6c" >Android</label>
+<input type="radio" id="bcbaf234d9df4dd3b75f536f70ad9423-f1c30d944f9849a8bed41899e89d7a3c" name="bcbaf234d9df4dd3b75f536f70ad9423" class="tab" ><label for="bcbaf234d9df4dd3b75f536f70ad9423-f1c30d944f9849a8bed41899e89d7a3c" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
