--- a/ble/getting-started.html
+++ b/ble/getting-started.html
@@ -367,18 +367,21 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>Bluetooth LE is divided into 2 separate categories - the central manager (client) and the peripheral manager (server).</p>
 <div class="tab-wrap">
-<input type="radio" id="dd4d307329aa4fdbb54492911cbbc107-1da8009fc0ce47be9b8b1592b38e35d1" name="dd4d307329aa4fdbb54492911cbbc107" class="tab" checked=""><label for="dd4d307329aa4fdbb54492911cbbc107-1da8009fc0ce47be9b8b1592b38e35d1">General</label>
-<input type="radio" id="dd4d307329aa4fdbb54492911cbbc107-959db25866c64c968e0f2d588335b60c" name="dd4d307329aa4fdbb54492911cbbc107" class="tab"><label for="dd4d307329aa4fdbb54492911cbbc107-959db25866c64c968e0f2d588335b60c">Startup</label>
-<input type="radio" id="dd4d307329aa4fdbb54492911cbbc107-bc3d394ebdc74aa4be982a9a5946d8ac" name="dd4d307329aa4fdbb54492911cbbc107" class="tab"><label for="dd4d307329aa4fdbb54492911cbbc107-bc3d394ebdc74aa4be982a9a5946d8ac">Android</label>
-<input type="radio" id="dd4d307329aa4fdbb54492911cbbc107-d6df48e658384ef2b04909e06d963de6" name="dd4d307329aa4fdbb54492911cbbc107" class="tab"><label for="dd4d307329aa4fdbb54492911cbbc107-d6df48e658384ef2b04909e06d963de6">iOS</label>
-<input type="radio" id="dd4d307329aa4fdbb54492911cbbc107-e57731836167421ca6cdec88fcd721ac" name="dd4d307329aa4fdbb54492911cbbc107" class="tab"><label for="dd4d307329aa4fdbb54492911cbbc107-e57731836167421ca6cdec88fcd721ac">Windows</label>
+<input type="radio" id="c335aa06d9da45eaac3d3cd3cbd72fad-33457c9ce97a4e67ac2e4dde3bdcd09f" name="c335aa06d9da45eaac3d3cd3cbd72fad" class="tab" checked=""><label for="c335aa06d9da45eaac3d3cd3cbd72fad-33457c9ce97a4e67ac2e4dde3bdcd09f">General</label>
+<input type="radio" id="c335aa06d9da45eaac3d3cd3cbd72fad-d79dc69e365f486eb782b7c9f4a5bec6" name="c335aa06d9da45eaac3d3cd3cbd72fad" class="tab"><label for="c335aa06d9da45eaac3d3cd3cbd72fad-d79dc69e365f486eb782b7c9f4a5bec6">Startup</label>
+<input type="radio" id="c335aa06d9da45eaac3d3cd3cbd72fad-df02601c6092407d987e818250a3d3c6" name="c335aa06d9da45eaac3d3cd3cbd72fad" class="tab"><label for="c335aa06d9da45eaac3d3cd3cbd72fad-df02601c6092407d987e818250a3d3c6">Android</label>
+<input type="radio" id="c335aa06d9da45eaac3d3cd3cbd72fad-cf10677e61964caeac67e5de06720cdc" name="c335aa06d9da45eaac3d3cd3cbd72fad" class="tab"><label for="c335aa06d9da45eaac3d3cd3cbd72fad-cf10677e61964caeac67e5de06720cdc">iOS</label>
+<input type="radio" id="c335aa06d9da45eaac3d3cd3cbd72fad-9004e08113064cb18171514746299297" name="c335aa06d9da45eaac3d3cd3cbd72fad" class="tab"><label for="c335aa06d9da45eaac3d3cd3cbd72fad-9004e08113064cb18171514746299297">Windows</label>
 <div class="tab__content">
 
 <p>|Area|Info|
