--- a/blehosting/getting-started.html
+++ b/blehosting/getting-started.html
@@ -369,16 +369,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="13ff3d24b24445b9a3cb9a4464d9390c-77cc79a683934341a037177640153879" name="13ff3d24b24445b9a3cb9a4464d9390c" class="tab" checked><label for="13ff3d24b24445b9a3cb9a4464d9390c-77cc79a683934341a037177640153879" >General</label>
-<input type="radio" id="13ff3d24b24445b9a3cb9a4464d9390c-7a7a649d7699401da16a766d18e43f79" name="13ff3d24b24445b9a3cb9a4464d9390c" class="tab" ><label for="13ff3d24b24445b9a3cb9a4464d9390c-7a7a649d7699401da16a766d18e43f79" >Startup</label>
-<input type="radio" id="13ff3d24b24445b9a3cb9a4464d9390c-51a1853f884548729cfa44544bfceb07" name="13ff3d24b24445b9a3cb9a4464d9390c" class="tab" ><label for="13ff3d24b24445b9a3cb9a4464d9390c-51a1853f884548729cfa44544bfceb07" >Android</label>
-<input type="radio" id="13ff3d24b24445b9a3cb9a4464d9390c-859397e5cdbc462a86456a5eb48e99f2" name="13ff3d24b24445b9a3cb9a4464d9390c" class="tab" ><label for="13ff3d24b24445b9a3cb9a4464d9390c-859397e5cdbc462a86456a5eb48e99f2" >iOS</label>
+<input type="radio" id="567695baece14f3682b37bb67d564047-040fc02dd8ed45af8cd95ad048393253" name="567695baece14f3682b37bb67d564047" class="tab" checked><label for="567695baece14f3682b37bb67d564047-040fc02dd8ed45af8cd95ad048393253" >General</label>
+<input type="radio" id="567695baece14f3682b37bb67d564047-ce4ac345729849f6b38aa0a3131bc6bb" name="567695baece14f3682b37bb67d564047" class="tab" ><label for="567695baece14f3682b37bb67d564047-ce4ac345729849f6b38aa0a3131bc6bb" >Startup</label>
+<input type="radio" id="567695baece14f3682b37bb67d564047-fc4b3972f483412a9d204c229e73f4d6" name="567695baece14f3682b37bb67d564047" class="tab" ><label for="567695baece14f3682b37bb67d564047-fc4b3972f483412a9d204c229e73f4d6" >Android</label>
+<input type="radio" id="567695baece14f3682b37bb67d564047-df22d2535d714cebbf4682e278e15f11" name="567695baece14f3682b37bb67d564047" class="tab" ><label for="567695baece14f3682b37bb67d564047-df22d2535d714cebbf4682e278e15f11" >iOS</label>
 <div class="tab__content">
 
 <p>|Area|Info|
