--- a/framework/gettingstarted.html
+++ b/framework/gettingstarted.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="0c6eb591ea2447bdba99b719588b924e-4ba132d02355464e9da602514369c773" name="0c6eb591ea2447bdba99b719588b924e" class="tab" checked><label for="0c6eb591ea2447bdba99b719588b924e-4ba132d02355464e9da602514369c773" >General</label>
-<input type="radio" id="0c6eb591ea2447bdba99b719588b924e-75030625b7d042678a850ef9e5f19fb8" name="0c6eb591ea2447bdba99b719588b924e" class="tab" ><label for="0c6eb591ea2447bdba99b719588b924e-75030625b7d042678a850ef9e5f19fb8" >Startup</label>
-<input type="radio" id="0c6eb591ea2447bdba99b719588b924e-6e58ef11ed6b46649bd992baf36e45d4" name="0c6eb591ea2447bdba99b719588b924e" class="tab" ><label for="0c6eb591ea2447bdba99b719588b924e-6e58ef11ed6b46649bd992baf36e45d4" >Android</label>
-<input type="radio" id="0c6eb591ea2447bdba99b719588b924e-dd4b8cab1724477ebfdbd02c154151d0" name="0c6eb591ea2447bdba99b719588b924e" class="tab" ><label for="0c6eb591ea2447bdba99b719588b924e-dd4b8cab1724477ebfdbd02c154151d0" >iOS</label>
-<input type="radio" id="0c6eb591ea2447bdba99b719588b924e-392821c6217e4352bb9687835efba7a2" name="0c6eb591ea2447bdba99b719588b924e" class="tab" ><label for="0c6eb591ea2447bdba99b719588b924e-392821c6217e4352bb9687835efba7a2" >Windows</label>
+<input type="radio" id="0b002796afdc452db5612ec05869ca1d-395c7ac36e2d4a4f8d86f54fe979d91f" name="0b002796afdc452db5612ec05869ca1d" class="tab" checked><label for="0b002796afdc452db5612ec05869ca1d-395c7ac36e2d4a4f8d86f54fe979d91f" >General</label>
+<input type="radio" id="0b002796afdc452db5612ec05869ca1d-95019888d62d4e3a998c48d587585eb7" name="0b002796afdc452db5612ec05869ca1d" class="tab" ><label for="0b002796afdc452db5612ec05869ca1d-95019888d62d4e3a998c48d587585eb7" >Startup</label>
+<input type="radio" id="0b002796afdc452db5612ec05869ca1d-4d72313f2a104d4396d81d00fb570901" name="0b002796afdc452db5612ec05869ca1d" class="tab" ><label for="0b002796afdc452db5612ec05869ca1d-4d72313f2a104d4396d81d00fb570901" >Android</label>
+<input type="radio" id="0b002796afdc452db5612ec05869ca1d-afdd4bdd866b45068d19382089edbffc" name="0b002796afdc452db5612ec05869ca1d" class="tab" ><label for="0b002796afdc452db5612ec05869ca1d-afdd4bdd866b45068d19382089edbffc" >iOS</label>
+<input type="radio" id="0b002796afdc452db5612ec05869ca1d-a76078cc0e7646cf951da67a5b5c66c2" name="0b002796afdc452db5612ec05869ca1d" class="tab" ><label for="0b002796afdc452db5612ec05869ca1d-a76078cc0e7646cf951da67a5b5c66c2" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
