--- a/httptransfers/getting-started.html
+++ b/httptransfers/getting-started.html
@@ -367,17 +367,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="696f508216274e33b966731269fed2a7-803901d33708481cbdd094bd57a4efc7" name="696f508216274e33b966731269fed2a7" class="tab" checked=""><label for="696f508216274e33b966731269fed2a7-803901d33708481cbdd094bd57a4efc7">General</label>
-<input type="radio" id="696f508216274e33b966731269fed2a7-691d4e5b74294ca28efa91a2879dc5ab" name="696f508216274e33b966731269fed2a7" class="tab"><label for="696f508216274e33b966731269fed2a7-691d4e5b74294ca28efa91a2879dc5ab">Startup</label>
-<input type="radio" id="696f508216274e33b966731269fed2a7-000a25285dc3406fa6a1e3d78ca6de99" name="696f508216274e33b966731269fed2a7" class="tab"><label for="696f508216274e33b966731269fed2a7-000a25285dc3406fa6a1e3d78ca6de99">Android</label>
-<input type="radio" id="696f508216274e33b966731269fed2a7-16c98b391d994fd6979820e11c828957" name="696f508216274e33b966731269fed2a7" class="tab"><label for="696f508216274e33b966731269fed2a7-16c98b391d994fd6979820e11c828957">iOS</label>
-<input type="radio" id="696f508216274e33b966731269fed2a7-638439ae6efc4f6bb9613bbe239e83f3" name="696f508216274e33b966731269fed2a7" class="tab"><label for="696f508216274e33b966731269fed2a7-638439ae6efc4f6bb9613bbe239e83f3">Windows</label>
+<input type="radio" id="3c52add5e028471ab3bc17a1141fe5e0-63874289dcb64546836e5dc686688091" name="3c52add5e028471ab3bc17a1141fe5e0" class="tab" checked=""><label for="3c52add5e028471ab3bc17a1141fe5e0-63874289dcb64546836e5dc686688091">General</label>
+<input type="radio" id="3c52add5e028471ab3bc17a1141fe5e0-6ac9951d1a3e47f8b834c0cf2d11b51e" name="3c52add5e028471ab3bc17a1141fe5e0" class="tab"><label for="3c52add5e028471ab3bc17a1141fe5e0-6ac9951d1a3e47f8b834c0cf2d11b51e">Startup</label>
+<input type="radio" id="3c52add5e028471ab3bc17a1141fe5e0-c1ccd05706c3427c952703bf90758701" name="3c52add5e028471ab3bc17a1141fe5e0" class="tab"><label for="3c52add5e028471ab3bc17a1141fe5e0-c1ccd05706c3427c952703bf90758701">Android</label>
+<input type="radio" id="3c52add5e028471ab3bc17a1141fe5e0-89f29fcda0f14189918f047bf0dee290" name="3c52add5e028471ab3bc17a1141fe5e0" class="tab"><label for="3c52add5e028471ab3bc17a1141fe5e0-89f29fcda0f14189918f047bf0dee290">iOS</label>
+<input type="radio" id="3c52add5e028471ab3bc17a1141fe5e0-effce49c0c514c1798f2c5ea2d005546" name="3c52add5e028471ab3bc17a1141fe5e0" class="tab"><label for="3c52add5e028471ab3bc17a1141fe5e0-effce49c0c514c1798f2c5ea2d005546">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
@@ -459,11 +462,11 @@ public override void HandleEventsForBackgroundUrl(UIApplication application, str
 </li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="c8ecaa33a7694918a27b0d934c572f50-d92904e0a26548faa8ddddfdc93fe5f7" name="c8ecaa33a7694918a27b0d934c572f50" class="tab" checked=""><label for="c8ecaa33a7694918a27b0d934c572f50-d92904e0a26548faa8ddddfdc93fe5f7">General</label>
-<input type="radio" id="c8ecaa33a7694918a27b0d934c572f50-c49f5e88e25e4bc8b39eaffade6d62d1" name="c8ecaa33a7694918a27b0d934c572f50" class="tab"><label for="c8ecaa33a7694918a27b0d934c572f50-c49f5e88e25e4bc8b39eaffade6d62d1">Startup</label>
-<input type="radio" id="c8ecaa33a7694918a27b0d934c572f50-e542c39df0ab45e2b92cacb7f1878152" name="c8ecaa33a7694918a27b0d934c572f50" class="tab"><label for="c8ecaa33a7694918a27b0d934c572f50-e542c39df0ab45e2b92cacb7f1878152">Android</label>
-<input type="radio" id="c8ecaa33a7694918a27b0d934c572f50-b75a985837b74cee9e104f7b48dcb2d9" name="c8ecaa33a7694918a27b0d934c572f50" class="tab"><label for="c8ecaa33a7694918a27b0d934c572f50-b75a985837b74cee9e104f7b48dcb2d9">iOS</label>
-<input type="radio" id="c8ecaa33a7694918a27b0d934c572f50-8f55a249032f430285788f5de1199d5e" name="c8ecaa33a7694918a27b0d934c572f50" class="tab"><label for="c8ecaa33a7694918a27b0d934c572f50-8f55a249032f430285788f5de1199d5e">Windows</label>
+<input type="radio" id="fae092bad81443658cfe96810bf3a760-c5683dab229c4fa2819c92e908d55158" name="fae092bad81443658cfe96810bf3a760" class="tab" checked=""><label for="fae092bad81443658cfe96810bf3a760-c5683dab229c4fa2819c92e908d55158">General</label>
+<input type="radio" id="fae092bad81443658cfe96810bf3a760-179677aa172a47639073373ac8cf0f66" name="fae092bad81443658cfe96810bf3a760" class="tab"><label for="fae092bad81443658cfe96810bf3a760-179677aa172a47639073373ac8cf0f66">Startup</label>
+<input type="radio" id="fae092bad81443658cfe96810bf3a760-bae482e7386048039df1777f208fc58c" name="fae092bad81443658cfe96810bf3a760" class="tab"><label for="fae092bad81443658cfe96810bf3a760-bae482e7386048039df1777f208fc58c">Android</label>
+<input type="radio" id="fae092bad81443658cfe96810bf3a760-dce6f9710653469ab03f452818896eb2" name="fae092bad81443658cfe96810bf3a760" class="tab"><label for="fae092bad81443658cfe96810bf3a760-dce6f9710653469ab03f452818896eb2">iOS</label>
+<input type="radio" id="fae092bad81443658cfe96810bf3a760-81b5c38d44ad452c84aa8f6477ca5e0b" name="fae092bad81443658cfe96810bf3a760" class="tab"><label for="fae092bad81443658cfe96810bf3a760-81b5c38d44ad452c84aa8f6477ca5e0b">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
