--- a/jobs/getting-started.html
+++ b/jobs/getting-started.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d75f3323b82d4130ba23725eeab662c4-4185469e26734898b17dc7eecad52056" name="d75f3323b82d4130ba23725eeab662c4" class="tab" checked><label for="d75f3323b82d4130ba23725eeab662c4-4185469e26734898b17dc7eecad52056" >General</label>
-<input type="radio" id="d75f3323b82d4130ba23725eeab662c4-ca24a1c4047a46239ea30c929112835d" name="d75f3323b82d4130ba23725eeab662c4" class="tab" ><label for="d75f3323b82d4130ba23725eeab662c4-ca24a1c4047a46239ea30c929112835d" >Startup</label>
-<input type="radio" id="d75f3323b82d4130ba23725eeab662c4-a443e6a39cd0453b8586ff59db426924" name="d75f3323b82d4130ba23725eeab662c4" class="tab" ><label for="d75f3323b82d4130ba23725eeab662c4-a443e6a39cd0453b8586ff59db426924" >Android</label>
-<input type="radio" id="d75f3323b82d4130ba23725eeab662c4-432a94cd5071473496b807cce4b635ea" name="d75f3323b82d4130ba23725eeab662c4" class="tab" ><label for="d75f3323b82d4130ba23725eeab662c4-432a94cd5071473496b807cce4b635ea" >iOS</label>
-<input type="radio" id="d75f3323b82d4130ba23725eeab662c4-c309ad5a279d4f608863e756467a5b3a" name="d75f3323b82d4130ba23725eeab662c4" class="tab" ><label for="d75f3323b82d4130ba23725eeab662c4-c309ad5a279d4f608863e756467a5b3a" >Windows</label>
+<input type="radio" id="9d91fa40ae994642a354ddb869c8c817-49521d13874c44b8b90cc2e3025b8791" name="9d91fa40ae994642a354ddb869c8c817" class="tab" checked><label for="9d91fa40ae994642a354ddb869c8c817-49521d13874c44b8b90cc2e3025b8791" >General</label>
+<input type="radio" id="9d91fa40ae994642a354ddb869c8c817-5e02ecbdaa86491f8cfe6d74d0c93ba4" name="9d91fa40ae994642a354ddb869c8c817" class="tab" ><label for="9d91fa40ae994642a354ddb869c8c817-5e02ecbdaa86491f8cfe6d74d0c93ba4" >Startup</label>
+<input type="radio" id="9d91fa40ae994642a354ddb869c8c817-735e65ba29054fef8ccd649f187cdb12" name="9d91fa40ae994642a354ddb869c8c817" class="tab" ><label for="9d91fa40ae994642a354ddb869c8c817-735e65ba29054fef8ccd649f187cdb12" >Android</label>
+<input type="radio" id="9d91fa40ae994642a354ddb869c8c817-01b9d88230fe4949a1ab1555d82602bf" name="9d91fa40ae994642a354ddb869c8c817" class="tab" ><label for="9d91fa40ae994642a354ddb869c8c817-01b9d88230fe4949a1ab1555d82602bf" >iOS</label>
+<input type="radio" id="9d91fa40ae994642a354ddb869c8c817-cb4714373f034c9da72e28b766dfb78c" name="9d91fa40ae994642a354ddb869c8c817" class="tab" ><label for="9d91fa40ae994642a354ddb869c8c817-cb4714373f034c9da72e28b766dfb78c" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
