--- a/locations/geofences.html
+++ b/locations/geofences.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="b88b21c2c20d4d859b00f9180fa18bee-3806f74c848e448ca52b582809fc24e7" name="b88b21c2c20d4d859b00f9180fa18bee" class="tab" checked><label for="b88b21c2c20d4d859b00f9180fa18bee-3806f74c848e448ca52b582809fc24e7" >General</label>
-<input type="radio" id="b88b21c2c20d4d859b00f9180fa18bee-6b80e03ef11c4d04b5dd65fe14209d0c" name="b88b21c2c20d4d859b00f9180fa18bee" class="tab" ><label for="b88b21c2c20d4d859b00f9180fa18bee-6b80e03ef11c4d04b5dd65fe14209d0c" >Startup</label>
-<input type="radio" id="b88b21c2c20d4d859b00f9180fa18bee-3c3e2946bb5b42cfa327b94af67217e4" name="b88b21c2c20d4d859b00f9180fa18bee" class="tab" ><label for="b88b21c2c20d4d859b00f9180fa18bee-3c3e2946bb5b42cfa327b94af67217e4" >Android</label>
-<input type="radio" id="b88b21c2c20d4d859b00f9180fa18bee-60b7c72245c145efaed69d1b34f88a81" name="b88b21c2c20d4d859b00f9180fa18bee" class="tab" ><label for="b88b21c2c20d4d859b00f9180fa18bee-60b7c72245c145efaed69d1b34f88a81" >iOS</label>
-<input type="radio" id="b88b21c2c20d4d859b00f9180fa18bee-b70f737826de42b69078a1fc93df0893" name="b88b21c2c20d4d859b00f9180fa18bee" class="tab" ><label for="b88b21c2c20d4d859b00f9180fa18bee-b70f737826de42b69078a1fc93df0893" >Windows</label>
+<input type="radio" id="c702425489284f74b215e6e5d645e204-8bbd0a8c2bbb4c8698ab1d5452a774be" name="c702425489284f74b215e6e5d645e204" class="tab" checked><label for="c702425489284f74b215e6e5d645e204-8bbd0a8c2bbb4c8698ab1d5452a774be" >General</label>
+<input type="radio" id="c702425489284f74b215e6e5d645e204-bde98183841d4e1d97a3d47f89758621" name="c702425489284f74b215e6e5d645e204" class="tab" ><label for="c702425489284f74b215e6e5d645e204-bde98183841d4e1d97a3d47f89758621" >Startup</label>
+<input type="radio" id="c702425489284f74b215e6e5d645e204-5b347349b0294ba7ac29243b00ec9e11" name="c702425489284f74b215e6e5d645e204" class="tab" ><label for="c702425489284f74b215e6e5d645e204-5b347349b0294ba7ac29243b00ec9e11" >Android</label>
+<input type="radio" id="c702425489284f74b215e6e5d645e204-81ac3039af6c45ccbdf16f0ef169c400" name="c702425489284f74b215e6e5d645e204" class="tab" ><label for="c702425489284f74b215e6e5d645e204-81ac3039af6c45ccbdf16f0ef169c400" >iOS</label>
+<input type="radio" id="c702425489284f74b215e6e5d645e204-ffce2ab651af42ab8c01059730de9916" name="c702425489284f74b215e6e5d645e204" class="tab" ><label for="c702425489284f74b215e6e5d645e204-ffce2ab651af42ab8c01059730de9916" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
