--- a/locations/gps.html
+++ b/locations/gps.html
@@ -369,18 +369,21 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <p>The Global Position System (GPS) on Shiny is actually a bit more complicated than other Shiny modules as it can really &quot;hammer&quot; away on your resources if you set it up wrong.</p>
 <div class="tab-wrap">
-<input type="radio" id="935a6e4d523d40b482ace12b0248c368-a6f02494712d47a5adc3c81e1fa9d490" name="935a6e4d523d40b482ace12b0248c368" class="tab" checked><label for="935a6e4d523d40b482ace12b0248c368-a6f02494712d47a5adc3c81e1fa9d490" >General</label>
-<input type="radio" id="935a6e4d523d40b482ace12b0248c368-b654fe3e008a42d7bc457bba004aa8ef" name="935a6e4d523d40b482ace12b0248c368" class="tab" ><label for="935a6e4d523d40b482ace12b0248c368-b654fe3e008a42d7bc457bba004aa8ef" >Startup</label>
-<input type="radio" id="935a6e4d523d40b482ace12b0248c368-a7acdd4cd17a47cf92771fe0b306a55d" name="935a6e4d523d40b482ace12b0248c368" class="tab" ><label for="935a6e4d523d40b482ace12b0248c368-a7acdd4cd17a47cf92771fe0b306a55d" >Android</label>
-<input type="radio" id="935a6e4d523d40b482ace12b0248c368-8b342ab3a17e4d2fbd467fbacc3637a3" name="935a6e4d523d40b482ace12b0248c368" class="tab" ><label for="935a6e4d523d40b482ace12b0248c368-8b342ab3a17e4d2fbd467fbacc3637a3" >iOS</label>
-<input type="radio" id="935a6e4d523d40b482ace12b0248c368-7e5c04e9595b4544900745f6036133d7" name="935a6e4d523d40b482ace12b0248c368" class="tab" ><label for="935a6e4d523d40b482ace12b0248c368-7e5c04e9595b4544900745f6036133d7" >Windows</label>
+<input type="radio" id="c338b9fcb2334833a630a9cb01936966-f4e853f523254000bf1b62c471b81fe0" name="c338b9fcb2334833a630a9cb01936966" class="tab" checked><label for="c338b9fcb2334833a630a9cb01936966-f4e853f523254000bf1b62c471b81fe0" >General</label>
+<input type="radio" id="c338b9fcb2334833a630a9cb01936966-ace9b15452124d08a9ea945aae34a661" name="c338b9fcb2334833a630a9cb01936966" class="tab" ><label for="c338b9fcb2334833a630a9cb01936966-ace9b15452124d08a9ea945aae34a661" >Startup</label>
+<input type="radio" id="c338b9fcb2334833a630a9cb01936966-0bd3122a6ae4462da1fd1c7b4a2ae733" name="c338b9fcb2334833a630a9cb01936966" class="tab" ><label for="c338b9fcb2334833a630a9cb01936966-0bd3122a6ae4462da1fd1c7b4a2ae733" >Android</label>
+<input type="radio" id="c338b9fcb2334833a630a9cb01936966-7edb4304b57e4d608513e3af065ed592" name="c338b9fcb2334833a630a9cb01936966" class="tab" ><label for="c338b9fcb2334833a630a9cb01936966-7edb4304b57e4d608513e3af065ed592" >iOS</label>
+<input type="radio" id="c338b9fcb2334833a630a9cb01936966-cc76fcdb3c154e369c1e6254f3a1e28b" name="c338b9fcb2334833a630a9cb01936966" class="tab" ><label for="c338b9fcb2334833a630a9cb01936966-cc76fcdb3c154e369c1e6254f3a1e28b" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
