--- a/locations/motionactivity.html
+++ b/locations/motionactivity.html
@@ -369,7 +369,10 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -384,10 +387,10 @@
 <li>Cycling</li>
 </ul>
 <div class="tab-wrap">
-<input type="radio" id="a28e61022a2243a7b10125aca79b523f-829dbb3474174f03a606001b94fd9f33" name="a28e61022a2243a7b10125aca79b523f" class="tab" checked><label for="a28e61022a2243a7b10125aca79b523f-829dbb3474174f03a606001b94fd9f33" >General</label>
-<input type="radio" id="a28e61022a2243a7b10125aca79b523f-5cc86fb8fe634e00afe0b826651f79a8" name="a28e61022a2243a7b10125aca79b523f" class="tab" ><label for="a28e61022a2243a7b10125aca79b523f-5cc86fb8fe634e00afe0b826651f79a8" >Startup</label>
-<input type="radio" id="a28e61022a2243a7b10125aca79b523f-d0baf7ad045e499dbeeb8a68041d8c1e" name="a28e61022a2243a7b10125aca79b523f" class="tab" ><label for="a28e61022a2243a7b10125aca79b523f-d0baf7ad045e499dbeeb8a68041d8c1e" >Android</label>
-<input type="radio" id="a28e61022a2243a7b10125aca79b523f-45c39844b70e46fead154a2f59de37d9" name="a28e61022a2243a7b10125aca79b523f" class="tab" ><label for="a28e61022a2243a7b10125aca79b523f-45c39844b70e46fead154a2f59de37d9" >iOS</label>
+<input type="radio" id="4c220ef3b4f44b699b791af59aa575bb-0cb77327e45046d1b361ba7df064b817" name="4c220ef3b4f44b699b791af59aa575bb" class="tab" checked><label for="4c220ef3b4f44b699b791af59aa575bb-0cb77327e45046d1b361ba7df064b817" >General</label>
+<input type="radio" id="4c220ef3b4f44b699b791af59aa575bb-b38df47cee334f52b71cb1021f8be8cb" name="4c220ef3b4f44b699b791af59aa575bb" class="tab" ><label for="4c220ef3b4f44b699b791af59aa575bb-b38df47cee334f52b71cb1021f8be8cb" >Startup</label>
+<input type="radio" id="4c220ef3b4f44b699b791af59aa575bb-c718b81f2bd541209d01513b77c48911" name="4c220ef3b4f44b699b791af59aa575bb" class="tab" ><label for="4c220ef3b4f44b699b791af59aa575bb-c718b81f2bd541209d01513b77c48911" >Android</label>
+<input type="radio" id="4c220ef3b4f44b699b791af59aa575bb-d6193eb765924b04b36a599992477fa7" name="4c220ef3b4f44b699b791af59aa575bb" class="tab" ><label for="4c220ef3b4f44b699b791af59aa575bb-d6193eb765924b04b36a599992477fa7" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
