--- a/notifications/getting-started.html
+++ b/notifications/getting-started.html
@@ -367,7 +367,10 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -376,11 +379,11 @@
 of letting your users know that you've done something in the background.  Maybe your job ran and determined that you need to do something OR you connected
 to a BLE peripheral... who knows, but you'll definitely need local notifications at some point well using Shiny</p>
 <div class="tab-wrap">
-<input type="radio" id="c9248da5e410410f9505429e46730a3d-0b12514317af4c4aaba2806c25b9665f" name="c9248da5e410410f9505429e46730a3d" class="tab" checked=""><label for="c9248da5e410410f9505429e46730a3d-0b12514317af4c4aaba2806c25b9665f">General</label>
-<input type="radio" id="c9248da5e410410f9505429e46730a3d-6ce2fced700349d98ba9da990a780462" name="c9248da5e410410f9505429e46730a3d" class="tab"><label for="c9248da5e410410f9505429e46730a3d-6ce2fced700349d98ba9da990a780462">Startup</label>
-<input type="radio" id="c9248da5e410410f9505429e46730a3d-dbd674001e224cb98633a7c85325bf33" name="c9248da5e410410f9505429e46730a3d" class="tab"><label for="c9248da5e410410f9505429e46730a3d-dbd674001e224cb98633a7c85325bf33">Android</label>
-<input type="radio" id="c9248da5e410410f9505429e46730a3d-2c460e90c93f4fffbd8b4019cf782cab" name="c9248da5e410410f9505429e46730a3d" class="tab"><label for="c9248da5e410410f9505429e46730a3d-2c460e90c93f4fffbd8b4019cf782cab">iOS</label>
-<input type="radio" id="c9248da5e410410f9505429e46730a3d-73b4f5f18606443584acf651eb7a298a" name="c9248da5e410410f9505429e46730a3d" class="tab"><label for="c9248da5e410410f9505429e46730a3d-73b4f5f18606443584acf651eb7a298a">Windows</label>
+<input type="radio" id="07a0b58fcea846f882a9b5214252d47c-d94a2fa99cbd4371b101eee77b8cbc2a" name="07a0b58fcea846f882a9b5214252d47c" class="tab" checked=""><label for="07a0b58fcea846f882a9b5214252d47c-d94a2fa99cbd4371b101eee77b8cbc2a">General</label>
+<input type="radio" id="07a0b58fcea846f882a9b5214252d47c-0dc99a8db91345598eca4b909438c2b6" name="07a0b58fcea846f882a9b5214252d47c" class="tab"><label for="07a0b58fcea846f882a9b5214252d47c-0dc99a8db91345598eca4b909438c2b6">Startup</label>
+<input type="radio" id="07a0b58fcea846f882a9b5214252d47c-6166aee89e94470391db7776763623cd" name="07a0b58fcea846f882a9b5214252d47c" class="tab"><label for="07a0b58fcea846f882a9b5214252d47c-6166aee89e94470391db7776763623cd">Android</label>
+<input type="radio" id="07a0b58fcea846f882a9b5214252d47c-af38b9227cda4283bbba49738720e38f" name="07a0b58fcea846f882a9b5214252d47c" class="tab"><label for="07a0b58fcea846f882a9b5214252d47c-af38b9227cda4283bbba49738720e38f">iOS</label>
+<input type="radio" id="07a0b58fcea846f882a9b5214252d47c-9bd4ccb8f5994aa1a8e0fe845bf4ddd5" name="07a0b58fcea846f882a9b5214252d47c" class="tab"><label for="07a0b58fcea846f882a9b5214252d47c-9bd4ccb8f5994aa1a8e0fe845bf4ddd5">Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
