--- a/push/azure.html
+++ b/push/azure.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="fd5f346ed0844a55a28a99fb71caf60f-376c2e9ffe004fa8a24fdcbe1eb8db8c" name="fd5f346ed0844a55a28a99fb71caf60f" class="tab" checked><label for="fd5f346ed0844a55a28a99fb71caf60f-376c2e9ffe004fa8a24fdcbe1eb8db8c" >General</label>
-<input type="radio" id="fd5f346ed0844a55a28a99fb71caf60f-fd9a55b19fb14bab8d28b8c57a040041" name="fd5f346ed0844a55a28a99fb71caf60f" class="tab" ><label for="fd5f346ed0844a55a28a99fb71caf60f-fd9a55b19fb14bab8d28b8c57a040041" >Startup</label>
-<input type="radio" id="fd5f346ed0844a55a28a99fb71caf60f-daeccd9b64d6494a85c4894e94ab8166" name="fd5f346ed0844a55a28a99fb71caf60f" class="tab" ><label for="fd5f346ed0844a55a28a99fb71caf60f-daeccd9b64d6494a85c4894e94ab8166" >Android</label>
-<input type="radio" id="fd5f346ed0844a55a28a99fb71caf60f-7fdb3c00d299404a810e2c75381733d9" name="fd5f346ed0844a55a28a99fb71caf60f" class="tab" ><label for="fd5f346ed0844a55a28a99fb71caf60f-7fdb3c00d299404a810e2c75381733d9" >iOS</label>
-<input type="radio" id="fd5f346ed0844a55a28a99fb71caf60f-efdd8cd97bc6404aa18c06b295a4afa9" name="fd5f346ed0844a55a28a99fb71caf60f" class="tab" ><label for="fd5f346ed0844a55a28a99fb71caf60f-efdd8cd97bc6404aa18c06b295a4afa9" >Windows</label>
+<input type="radio" id="b73ee46be493486f86539f5e91ce5c0b-0ba93213e8934ea8a97f9de73b1562f1" name="b73ee46be493486f86539f5e91ce5c0b" class="tab" checked><label for="b73ee46be493486f86539f5e91ce5c0b-0ba93213e8934ea8a97f9de73b1562f1" >General</label>
+<input type="radio" id="b73ee46be493486f86539f5e91ce5c0b-c956abf16ac3427db9d6d23fec872b1b" name="b73ee46be493486f86539f5e91ce5c0b" class="tab" ><label for="b73ee46be493486f86539f5e91ce5c0b-c956abf16ac3427db9d6d23fec872b1b" >Startup</label>
+<input type="radio" id="b73ee46be493486f86539f5e91ce5c0b-f92a398a821148048122175afaf08891" name="b73ee46be493486f86539f5e91ce5c0b" class="tab" ><label for="b73ee46be493486f86539f5e91ce5c0b-f92a398a821148048122175afaf08891" >Android</label>
+<input type="radio" id="b73ee46be493486f86539f5e91ce5c0b-eebcad8a006946cd8def4d919c4c9dd2" name="b73ee46be493486f86539f5e91ce5c0b" class="tab" ><label for="b73ee46be493486f86539f5e91ce5c0b-eebcad8a006946cd8def4d919c4c9dd2" >iOS</label>
+<input type="radio" id="b73ee46be493486f86539f5e91ce5c0b-00c36e3ae327406cb74b517918667b4d" name="b73ee46be493486f86539f5e91ce5c0b" class="tab" ><label for="b73ee46be493486f86539f5e91ce5c0b-00c36e3ae327406cb74b517918667b4d" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
