--- a/push/firebase.html
+++ b/push/firebase.html
@@ -367,16 +367,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="02f39de538a244ec97586d58878ee0cf-e5b9c03b0e404b5cafa93b1f3de1ea8d" name="02f39de538a244ec97586d58878ee0cf" class="tab" checked=""><label for="02f39de538a244ec97586d58878ee0cf-e5b9c03b0e404b5cafa93b1f3de1ea8d">General</label>
-<input type="radio" id="02f39de538a244ec97586d58878ee0cf-bafcc8684fce4ed7a14b13a3ae00a652" name="02f39de538a244ec97586d58878ee0cf" class="tab"><label for="02f39de538a244ec97586d58878ee0cf-bafcc8684fce4ed7a14b13a3ae00a652">Startup</label>
-<input type="radio" id="02f39de538a244ec97586d58878ee0cf-a72c5965dd68437f96cec18292ca2943" name="02f39de538a244ec97586d58878ee0cf" class="tab"><label for="02f39de538a244ec97586d58878ee0cf-a72c5965dd68437f96cec18292ca2943">Android</label>
-<input type="radio" id="02f39de538a244ec97586d58878ee0cf-a79a968337994120af293be4c9160b95" name="02f39de538a244ec97586d58878ee0cf" class="tab"><label for="02f39de538a244ec97586d58878ee0cf-a79a968337994120af293be4c9160b95">iOS</label>
+<input type="radio" id="3c366ee9184f4526af61d4cde31d7dfd-54c74c31aa2a40b7817fcaf2e9eb8d08" name="3c366ee9184f4526af61d4cde31d7dfd" class="tab" checked=""><label for="3c366ee9184f4526af61d4cde31d7dfd-54c74c31aa2a40b7817fcaf2e9eb8d08">General</label>
+<input type="radio" id="3c366ee9184f4526af61d4cde31d7dfd-8b3c5413249f438397f651c15bcdd46d" name="3c366ee9184f4526af61d4cde31d7dfd" class="tab"><label for="3c366ee9184f4526af61d4cde31d7dfd-8b3c5413249f438397f651c15bcdd46d">Startup</label>
+<input type="radio" id="3c366ee9184f4526af61d4cde31d7dfd-954513af54f940d39215d68b0e4591f4" name="3c366ee9184f4526af61d4cde31d7dfd" class="tab"><label for="3c366ee9184f4526af61d4cde31d7dfd-954513af54f940d39215d68b0e4591f4">Android</label>
+<input type="radio" id="3c366ee9184f4526af61d4cde31d7dfd-760ea710d389413fa24802657d7065e3" name="3c366ee9184f4526af61d4cde31d7dfd" class="tab"><label for="3c366ee9184f4526af61d4cde31d7dfd-760ea710d389413fa24802657d7065e3">iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
