--- a/push/onesignal.html
+++ b/push/onesignal.html
@@ -369,16 +369,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="a8ab55da78e24f9c902767f020e04e68-c049f9ed701b43e49d07b5818568df76" name="a8ab55da78e24f9c902767f020e04e68" class="tab" checked><label for="a8ab55da78e24f9c902767f020e04e68-c049f9ed701b43e49d07b5818568df76" >General</label>
-<input type="radio" id="a8ab55da78e24f9c902767f020e04e68-3b4e73e4397145c08a179e0b8a350912" name="a8ab55da78e24f9c902767f020e04e68" class="tab" ><label for="a8ab55da78e24f9c902767f020e04e68-3b4e73e4397145c08a179e0b8a350912" >Startup</label>
-<input type="radio" id="a8ab55da78e24f9c902767f020e04e68-96635e020cd34604bd59994b94c69916" name="a8ab55da78e24f9c902767f020e04e68" class="tab" ><label for="a8ab55da78e24f9c902767f020e04e68-96635e020cd34604bd59994b94c69916" >Android</label>
-<input type="radio" id="a8ab55da78e24f9c902767f020e04e68-d4320519c76f426fb0e3b7371157f369" name="a8ab55da78e24f9c902767f020e04e68" class="tab" ><label for="a8ab55da78e24f9c902767f020e04e68-d4320519c76f426fb0e3b7371157f369" >iOS</label>
+<input type="radio" id="dc64d6fd2c3749af8523ed80c666b278-8699c46d106e4322ab79ba995045c74d" name="dc64d6fd2c3749af8523ed80c666b278" class="tab" checked><label for="dc64d6fd2c3749af8523ed80c666b278-8699c46d106e4322ab79ba995045c74d" >General</label>
+<input type="radio" id="dc64d6fd2c3749af8523ed80c666b278-b807d61fed3842bdbdbb57a95b3f7b59" name="dc64d6fd2c3749af8523ed80c666b278" class="tab" ><label for="dc64d6fd2c3749af8523ed80c666b278-b807d61fed3842bdbdbb57a95b3f7b59" >Startup</label>
+<input type="radio" id="dc64d6fd2c3749af8523ed80c666b278-e97936bcd1204850a20ca5c5fe2d19cd" name="dc64d6fd2c3749af8523ed80c666b278" class="tab" ><label for="dc64d6fd2c3749af8523ed80c666b278-e97936bcd1204850a20ca5c5fe2d19cd" >Android</label>
+<input type="radio" id="dc64d6fd2c3749af8523ed80c666b278-5cecfbf57b6043ca8077161ea70ed932" name="dc64d6fd2c3749af8523ed80c666b278" class="tab" ><label for="dc64d6fd2c3749af8523ed80c666b278-5cecfbf57b6043ca8077161ea70ed932" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
