--- a/sensors/accelerometer.html
+++ b/sensors/accelerometer.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="62bae23306a1460fae04df02809628bc-0822f7443754458a89eb14c08ec1ca38" name="62bae23306a1460fae04df02809628bc" class="tab" checked><label for="62bae23306a1460fae04df02809628bc-0822f7443754458a89eb14c08ec1ca38" >General</label>
-<input type="radio" id="62bae23306a1460fae04df02809628bc-c28856463b524c108584462a6b13bed6" name="62bae23306a1460fae04df02809628bc" class="tab" ><label for="62bae23306a1460fae04df02809628bc-c28856463b524c108584462a6b13bed6" >Startup</label>
-<input type="radio" id="62bae23306a1460fae04df02809628bc-ef7beb0e87424a288f05021963d8f028" name="62bae23306a1460fae04df02809628bc" class="tab" ><label for="62bae23306a1460fae04df02809628bc-ef7beb0e87424a288f05021963d8f028" >Android</label>
-<input type="radio" id="62bae23306a1460fae04df02809628bc-ae5f8a67cd054612885ba4afbf42fdab" name="62bae23306a1460fae04df02809628bc" class="tab" ><label for="62bae23306a1460fae04df02809628bc-ae5f8a67cd054612885ba4afbf42fdab" >iOS</label>
-<input type="radio" id="62bae23306a1460fae04df02809628bc-4d8decc1b020489c943e3d2c921d5cc6" name="62bae23306a1460fae04df02809628bc" class="tab" ><label for="62bae23306a1460fae04df02809628bc-4d8decc1b020489c943e3d2c921d5cc6" >Windows</label>
+<input type="radio" id="25f5d18d316142b0acc873e926fde576-19d537565bf0418aa48a113bb6594c69" name="25f5d18d316142b0acc873e926fde576" class="tab" checked><label for="25f5d18d316142b0acc873e926fde576-19d537565bf0418aa48a113bb6594c69" >General</label>
+<input type="radio" id="25f5d18d316142b0acc873e926fde576-220eb3ea1196477da0ac2cb3864cad83" name="25f5d18d316142b0acc873e926fde576" class="tab" ><label for="25f5d18d316142b0acc873e926fde576-220eb3ea1196477da0ac2cb3864cad83" >Startup</label>
+<input type="radio" id="25f5d18d316142b0acc873e926fde576-0573fa8c1eaa4528aa582383800f4716" name="25f5d18d316142b0acc873e926fde576" class="tab" ><label for="25f5d18d316142b0acc873e926fde576-0573fa8c1eaa4528aa582383800f4716" >Android</label>
+<input type="radio" id="25f5d18d316142b0acc873e926fde576-d164eedb48df4699bb53636f041e1a70" name="25f5d18d316142b0acc873e926fde576" class="tab" ><label for="25f5d18d316142b0acc873e926fde576-d164eedb48df4699bb53636f041e1a70" >iOS</label>
+<input type="radio" id="25f5d18d316142b0acc873e926fde576-e31b6a735c2b4866a2b713f59ce2e24f" name="25f5d18d316142b0acc873e926fde576" class="tab" ><label for="25f5d18d316142b0acc873e926fde576-e31b6a735c2b4866a2b713f59ce2e24f" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
