--- a/sensors/compass.html
+++ b/sensors/compass.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="fed008a653844fe99a637e90857eef10-e7f6b983c8c54b79921d820c2a4f4dca" name="fed008a653844fe99a637e90857eef10" class="tab" checked><label for="fed008a653844fe99a637e90857eef10-e7f6b983c8c54b79921d820c2a4f4dca" >General</label>
-<input type="radio" id="fed008a653844fe99a637e90857eef10-8f4ea84ae7c34cffa7affb924c44bef9" name="fed008a653844fe99a637e90857eef10" class="tab" ><label for="fed008a653844fe99a637e90857eef10-8f4ea84ae7c34cffa7affb924c44bef9" >Startup</label>
-<input type="radio" id="fed008a653844fe99a637e90857eef10-ea805ff814f34bcf8b351750e2ab7e86" name="fed008a653844fe99a637e90857eef10" class="tab" ><label for="fed008a653844fe99a637e90857eef10-ea805ff814f34bcf8b351750e2ab7e86" >Android</label>
-<input type="radio" id="fed008a653844fe99a637e90857eef10-72a7c72926b04ffcbd8152dc300bd279" name="fed008a653844fe99a637e90857eef10" class="tab" ><label for="fed008a653844fe99a637e90857eef10-72a7c72926b04ffcbd8152dc300bd279" >iOS</label>
-<input type="radio" id="fed008a653844fe99a637e90857eef10-5bd98cbff8a14a8ca11f8a076d7f94e1" name="fed008a653844fe99a637e90857eef10" class="tab" ><label for="fed008a653844fe99a637e90857eef10-5bd98cbff8a14a8ca11f8a076d7f94e1" >Windows</label>
+<input type="radio" id="0d960ffc557f4c6a864db28e863976df-e734378d21da4ca3aa69b8feca182751" name="0d960ffc557f4c6a864db28e863976df" class="tab" checked><label for="0d960ffc557f4c6a864db28e863976df-e734378d21da4ca3aa69b8feca182751" >General</label>
+<input type="radio" id="0d960ffc557f4c6a864db28e863976df-4bc9323cebb34a07bbad304dc7a9c67d" name="0d960ffc557f4c6a864db28e863976df" class="tab" ><label for="0d960ffc557f4c6a864db28e863976df-4bc9323cebb34a07bbad304dc7a9c67d" >Startup</label>
+<input type="radio" id="0d960ffc557f4c6a864db28e863976df-831e4aebb4784f57b55127c13ccb718a" name="0d960ffc557f4c6a864db28e863976df" class="tab" ><label for="0d960ffc557f4c6a864db28e863976df-831e4aebb4784f57b55127c13ccb718a" >Android</label>
+<input type="radio" id="0d960ffc557f4c6a864db28e863976df-908f74e9261d4c93b9850dc4e5772ff2" name="0d960ffc557f4c6a864db28e863976df" class="tab" ><label for="0d960ffc557f4c6a864db28e863976df-908f74e9261d4c93b9850dc4e5772ff2" >iOS</label>
+<input type="radio" id="0d960ffc557f4c6a864db28e863976df-108bd2d15f704a3196554391de56b0fe" name="0d960ffc557f4c6a864db28e863976df" class="tab" ><label for="0d960ffc557f4c6a864db28e863976df-108bd2d15f704a3196554391de56b0fe" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
