--- a/sensors/gyroscope.html
+++ b/sensors/gyroscope.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="09e761ee4f1046c7a94d3bf96a327580-71d6805487274b30bd8e3122423aee39" name="09e761ee4f1046c7a94d3bf96a327580" class="tab" checked><label for="09e761ee4f1046c7a94d3bf96a327580-71d6805487274b30bd8e3122423aee39" >General</label>
-<input type="radio" id="09e761ee4f1046c7a94d3bf96a327580-ea55621a3f864bcd8237855e3fc4c76e" name="09e761ee4f1046c7a94d3bf96a327580" class="tab" ><label for="09e761ee4f1046c7a94d3bf96a327580-ea55621a3f864bcd8237855e3fc4c76e" >Startup</label>
-<input type="radio" id="09e761ee4f1046c7a94d3bf96a327580-a04624b4f550486e8dac330562e215ff" name="09e761ee4f1046c7a94d3bf96a327580" class="tab" ><label for="09e761ee4f1046c7a94d3bf96a327580-a04624b4f550486e8dac330562e215ff" >Android</label>
-<input type="radio" id="09e761ee4f1046c7a94d3bf96a327580-e17dc18a775d4a96b0bf9e39bf2f8874" name="09e761ee4f1046c7a94d3bf96a327580" class="tab" ><label for="09e761ee4f1046c7a94d3bf96a327580-e17dc18a775d4a96b0bf9e39bf2f8874" >iOS</label>
-<input type="radio" id="09e761ee4f1046c7a94d3bf96a327580-42c8be73e8b844c1befd66e9e5d8130b" name="09e761ee4f1046c7a94d3bf96a327580" class="tab" ><label for="09e761ee4f1046c7a94d3bf96a327580-42c8be73e8b844c1befd66e9e5d8130b" >Windows</label>
+<input type="radio" id="7f60036e6f9a46b899b48da8d7438005-86dc712bfc214fae901383f2c78aeaa8" name="7f60036e6f9a46b899b48da8d7438005" class="tab" checked><label for="7f60036e6f9a46b899b48da8d7438005-86dc712bfc214fae901383f2c78aeaa8" >General</label>
+<input type="radio" id="7f60036e6f9a46b899b48da8d7438005-1a19234cf937456fb85c6ee6e16baaab" name="7f60036e6f9a46b899b48da8d7438005" class="tab" ><label for="7f60036e6f9a46b899b48da8d7438005-1a19234cf937456fb85c6ee6e16baaab" >Startup</label>
+<input type="radio" id="7f60036e6f9a46b899b48da8d7438005-b56d0f3b141148a8ade8192b62a9bdfd" name="7f60036e6f9a46b899b48da8d7438005" class="tab" ><label for="7f60036e6f9a46b899b48da8d7438005-b56d0f3b141148a8ade8192b62a9bdfd" >Android</label>
+<input type="radio" id="7f60036e6f9a46b899b48da8d7438005-58c01ad643614eaa9b9921593fe291d6" name="7f60036e6f9a46b899b48da8d7438005" class="tab" ><label for="7f60036e6f9a46b899b48da8d7438005-58c01ad643614eaa9b9921593fe291d6" >iOS</label>
+<input type="radio" id="7f60036e6f9a46b899b48da8d7438005-ecfe05ca5d214cbb97c96fd82df25e0e" name="7f60036e6f9a46b899b48da8d7438005" class="tab" ><label for="7f60036e6f9a46b899b48da8d7438005-ecfe05ca5d214cbb97c96fd82df25e0e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
