--- a/sensors/humidity.html
+++ b/sensors/humidity.html
@@ -369,15 +369,18 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="603c966cab574cbc9b199eda72f8d956-d2551517fa0947b6a66b48d62190f4c6" name="603c966cab574cbc9b199eda72f8d956" class="tab" checked><label for="603c966cab574cbc9b199eda72f8d956-d2551517fa0947b6a66b48d62190f4c6" >General</label>
-<input type="radio" id="603c966cab574cbc9b199eda72f8d956-75a062a9746141e6ba03ed3bd4c4b3d5" name="603c966cab574cbc9b199eda72f8d956" class="tab" ><label for="603c966cab574cbc9b199eda72f8d956-75a062a9746141e6ba03ed3bd4c4b3d5" >Startup</label>
-<input type="radio" id="603c966cab574cbc9b199eda72f8d956-fe249872c3dc44e0903d670a44514670" name="603c966cab574cbc9b199eda72f8d956" class="tab" ><label for="603c966cab574cbc9b199eda72f8d956-fe249872c3dc44e0903d670a44514670" >Android</label>
+<input type="radio" id="f6cd090dde524d3bba67361e8ea767af-f8a60883e84d4de488d459267c3215b4" name="f6cd090dde524d3bba67361e8ea767af" class="tab" checked><label for="f6cd090dde524d3bba67361e8ea767af-f8a60883e84d4de488d459267c3215b4" >General</label>
+<input type="radio" id="f6cd090dde524d3bba67361e8ea767af-1640f7ccac9c490aa12c63ec51c25cf0" name="f6cd090dde524d3bba67361e8ea767af" class="tab" ><label for="f6cd090dde524d3bba67361e8ea767af-1640f7ccac9c490aa12c63ec51c25cf0" >Startup</label>
+<input type="radio" id="f6cd090dde524d3bba67361e8ea767af-26d3ed139c1e4381b24f45507452f784" name="f6cd090dde524d3bba67361e8ea767af" class="tab" ><label for="f6cd090dde524d3bba67361e8ea767af-26d3ed139c1e4381b24f45507452f784" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
