--- a/sensors/magnetometer.html
+++ b/sensors/magnetometer.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="723777df42be47eb9c4c8773384381c6-ddd73c37c9ca4f4cb7e3a6867d9ef492" name="723777df42be47eb9c4c8773384381c6" class="tab" checked><label for="723777df42be47eb9c4c8773384381c6-ddd73c37c9ca4f4cb7e3a6867d9ef492" >General</label>
-<input type="radio" id="723777df42be47eb9c4c8773384381c6-30c5620c5ed543d0a66257f0b33095b5" name="723777df42be47eb9c4c8773384381c6" class="tab" ><label for="723777df42be47eb9c4c8773384381c6-30c5620c5ed543d0a66257f0b33095b5" >Startup</label>
-<input type="radio" id="723777df42be47eb9c4c8773384381c6-e10d84662747429f88a16262f182c12c" name="723777df42be47eb9c4c8773384381c6" class="tab" ><label for="723777df42be47eb9c4c8773384381c6-e10d84662747429f88a16262f182c12c" >Android</label>
-<input type="radio" id="723777df42be47eb9c4c8773384381c6-874db708fd364862a8647eb3a51d9b42" name="723777df42be47eb9c4c8773384381c6" class="tab" ><label for="723777df42be47eb9c4c8773384381c6-874db708fd364862a8647eb3a51d9b42" >iOS</label>
-<input type="radio" id="723777df42be47eb9c4c8773384381c6-99127010f2b7453cb6fc934f5bf0448b" name="723777df42be47eb9c4c8773384381c6" class="tab" ><label for="723777df42be47eb9c4c8773384381c6-99127010f2b7453cb6fc934f5bf0448b" >Windows</label>
+<input type="radio" id="80b675ba7c3c42248f8f3359a1646383-1cd749464201488ab227416a9354514d" name="80b675ba7c3c42248f8f3359a1646383" class="tab" checked><label for="80b675ba7c3c42248f8f3359a1646383-1cd749464201488ab227416a9354514d" >General</label>
+<input type="radio" id="80b675ba7c3c42248f8f3359a1646383-e25b4a1d40c841dab756d7230416d8bd" name="80b675ba7c3c42248f8f3359a1646383" class="tab" ><label for="80b675ba7c3c42248f8f3359a1646383-e25b4a1d40c841dab756d7230416d8bd" >Startup</label>
+<input type="radio" id="80b675ba7c3c42248f8f3359a1646383-fb07a7eed14942c2a691a421dd7e97ca" name="80b675ba7c3c42248f8f3359a1646383" class="tab" ><label for="80b675ba7c3c42248f8f3359a1646383-fb07a7eed14942c2a691a421dd7e97ca" >Android</label>
+<input type="radio" id="80b675ba7c3c42248f8f3359a1646383-14eec3f6aa834fa3aaa250f2047b35b1" name="80b675ba7c3c42248f8f3359a1646383" class="tab" ><label for="80b675ba7c3c42248f8f3359a1646383-14eec3f6aa834fa3aaa250f2047b35b1" >iOS</label>
+<input type="radio" id="80b675ba7c3c42248f8f3359a1646383-1b7ca743bd3f41f383c6f03bd02d34f1" name="80b675ba7c3c42248f8f3359a1646383" class="tab" ><label for="80b675ba7c3c42248f8f3359a1646383-1b7ca743bd3f41f383c6f03bd02d34f1" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
