--- a/sensors/proximity.html
+++ b/sensors/proximity.html
@@ -369,16 +369,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="32413883d3814e47ae5de51ce415abfc-86d041626b8a4c36986770dc5a9d77d4" name="32413883d3814e47ae5de51ce415abfc" class="tab" checked><label for="32413883d3814e47ae5de51ce415abfc-86d041626b8a4c36986770dc5a9d77d4" >General</label>
-<input type="radio" id="32413883d3814e47ae5de51ce415abfc-24f20a5f4c384b39bdac441de743bf3b" name="32413883d3814e47ae5de51ce415abfc" class="tab" ><label for="32413883d3814e47ae5de51ce415abfc-24f20a5f4c384b39bdac441de743bf3b" >Startup</label>
-<input type="radio" id="32413883d3814e47ae5de51ce415abfc-829ff40fb19c4963810106624f336361" name="32413883d3814e47ae5de51ce415abfc" class="tab" ><label for="32413883d3814e47ae5de51ce415abfc-829ff40fb19c4963810106624f336361" >Android</label>
-<input type="radio" id="32413883d3814e47ae5de51ce415abfc-9d7d62abf9564c359e058e6ca9d8d96b" name="32413883d3814e47ae5de51ce415abfc" class="tab" ><label for="32413883d3814e47ae5de51ce415abfc-9d7d62abf9564c359e058e6ca9d8d96b" >iOS</label>
+<input type="radio" id="ccbdb1b05002471ebb05998c6624fcf7-21f9bb0584dc48d1ae31bee24c243d45" name="ccbdb1b05002471ebb05998c6624fcf7" class="tab" checked><label for="ccbdb1b05002471ebb05998c6624fcf7-21f9bb0584dc48d1ae31bee24c243d45" >General</label>
+<input type="radio" id="ccbdb1b05002471ebb05998c6624fcf7-24e70ea7ad8f4c0b96943d68bf68ae3c" name="ccbdb1b05002471ebb05998c6624fcf7" class="tab" ><label for="ccbdb1b05002471ebb05998c6624fcf7-24e70ea7ad8f4c0b96943d68bf68ae3c" >Startup</label>
+<input type="radio" id="ccbdb1b05002471ebb05998c6624fcf7-cb959129f3464905bcc74513f9646918" name="ccbdb1b05002471ebb05998c6624fcf7" class="tab" ><label for="ccbdb1b05002471ebb05998c6624fcf7-cb959129f3464905bcc74513f9646918" >Android</label>
+<input type="radio" id="ccbdb1b05002471ebb05998c6624fcf7-bc4e2745af1f4dc3989105d490be1926" name="ccbdb1b05002471ebb05998c6624fcf7" class="tab" ><label for="ccbdb1b05002471ebb05998c6624fcf7-bc4e2745af1f4dc3989105d490be1926" >iOS</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
