--- a/sensors/temperature.html
+++ b/sensors/temperature.html
@@ -369,15 +369,18 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="1358fc84fcbd40f0abd8aea370f28d30-5f1cb1e3d4744da2b961db26f2015292" name="1358fc84fcbd40f0abd8aea370f28d30" class="tab" checked><label for="1358fc84fcbd40f0abd8aea370f28d30-5f1cb1e3d4744da2b961db26f2015292" >General</label>
-<input type="radio" id="1358fc84fcbd40f0abd8aea370f28d30-3aa8fc2d55134d2b96b287695ebe2f57" name="1358fc84fcbd40f0abd8aea370f28d30" class="tab" ><label for="1358fc84fcbd40f0abd8aea370f28d30-3aa8fc2d55134d2b96b287695ebe2f57" >Startup</label>
-<input type="radio" id="1358fc84fcbd40f0abd8aea370f28d30-f0163d9471634abaaed38386167e2137" name="1358fc84fcbd40f0abd8aea370f28d30" class="tab" ><label for="1358fc84fcbd40f0abd8aea370f28d30-f0163d9471634abaaed38386167e2137" >Android</label>
+<input type="radio" id="3ca0751c0703426ca6341732009a78b6-ba597a39ad74432d80803a12d7ff02a6" name="3ca0751c0703426ca6341732009a78b6" class="tab" checked><label for="3ca0751c0703426ca6341732009a78b6-ba597a39ad74432d80803a12d7ff02a6" >General</label>
+<input type="radio" id="3ca0751c0703426ca6341732009a78b6-f60e989fa37b49209c1931e01a894ebb" name="3ca0751c0703426ca6341732009a78b6" class="tab" ><label for="3ca0751c0703426ca6341732009a78b6-f60e989fa37b49209c1931e01a894ebb" >Startup</label>
+<input type="radio" id="3ca0751c0703426ca6341732009a78b6-c3ecac6a8ef74f048cc5621018bb3fbd" name="3ca0751c0703426ca6341732009a78b6" class="tab" ><label for="3ca0751c0703426ca6341732009a78b6-c3ecac6a8ef74f048cc5621018bb3fbd" >Android</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
