--- a/release-notes/v250.html
+++ b/release-notes/v250.html
@@ -19,7 +19,7 @@
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/components/prism-core.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/prismjs@1.19.0/plugins/autoloader/prism-autoloader.min.js" data-no-mirror></script>
 
-    <title>Shiny.NET - FAQ</title>
+    <title>Shiny.NET - 2.5.0 (Preview)</title>
     <link href="/scss/TabGroup.css" rel="stylesheet" type="text/css">
 </head>
 <body class="d-flex flex-column">
@@ -53,7 +53,7 @@
                         <div class="row">
                             <div class="offset-md-3 offset-lg-2 px-3 px-md-0">
                                 <div class="section text-uppercase">Shiny.NET</div>
-                                <div class="text-white m-0 title">FAQ</div>
+                                <div class="text-white m-0 title">2.5.0 (Preview)</div>
                             </div>
                         </div>
                     </div>
@@ -106,11 +106,11 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/jobs">Jobs</a>                                            </div>
-                                                <div class="sidebar-nav-children active">
+                                                <div class="sidebar-nav-children">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/jobs/getting-started">Getting Started</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child active">
+                                                        <div class="sidebar-nav-child">
                                                             <a href="/jobs/faq">FAQ</a>
                                                         </div>
                                                 </div>
@@ -343,7 +343,7 @@
                                                 </div>
                                             <div class="sidebar-nav-item has-children">
 <a href="/release-notes">Release Notes</a>                                            </div>
-                                                <div class="sidebar-nav-children">
+                                                <div class="sidebar-nav-children active">
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v20">v2.0.2639 (May 5, 2021)</a>
                                                         </div>
@@ -371,91 +371,20 @@
                                                         <div class="sidebar-nav-child">
                                                             <a href="/release-notes/v243">2.4.3</a>
                                                         </div>
-                                                        <div class="sidebar-nav-child">
+                                                        <div class="sidebar-nav-child active">
                                                             <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
-                                    <h1 id="frequently-asked-questions">Frequently Asked Questions</h1>
+                                    <h2 id="core">Core</h2>
 <ul>
-<li>If Doze is enabled, the reschedule period is not guaranteed to be an average of 10 mins.  It may be much longer.</li>
-<li></li>
+<li>[Enhancement] Improved boilerplate 3rd party library generation - now includes FFImageLoading</li>
 </ul>
-<ol type="A" start="17">
-<li>When should I schedule my defined jobs?  Should I do everytime I start the app.</li>
-</ol>
-<blockquote>
-<p>When your app starts (Xamarin Forms App.OnStart is a good place).  It is a good practice to schedule every start.  The framework will only update jobs if one already exists.</p>
-</blockquote>
-<ol type="A" start="17">
-<li>How long does the background sync let me have on iOS</li>
-</ol>
-<blockquote>
-<p>30 seconds and not a penny more</p>
-</blockquote>
-<ol type="A" start="17">
-<li>How do I schedule periodic jobs?</li>
-</ol>
-<blockquote>
-<p>All jobs are considered periodic with or without criteria</p>
-</blockquote>
-<ol type="A" start="17">
-<li>Why no job triggers? (ie. geofence, bluetooth, specific time)</li>
-</ol>
-<blockquote>
-<p>I am considering some triggers in the future. The current limitations on the time factored jobs is that iOS is in complete control of how/when things are run</p>
-</blockquote>
-<ol type="A" start="17">
-<li>How many jobs can I run?</li>
-</ol>
-<blockquote>
-<p>Technically as many as you want... BUT this was built with mobile timeslicing in mind (ie. iOS).  Your job set needs to complete within that timeslice as we don't set job ordering currently</p>
-</blockquote>
-<ol type="A" start="17">
-<li>Is there job priorization?</li>
-</ol>
-<blockquote>
-<p>Not yet - debating this one for the future</p>
-</blockquote>
-<ol type="A" start="17">
-<li>Why can't I set the next runtime</li>
-</ol>
-<blockquote>
-<p>From a true runtime perspective you can't, however, inside you job you can set add/update the job parameters or check the last runtime on the job info to see if you want to run.  Example below:</p>
-</blockquote>
-<pre><code class="language-csharp">public class SampleJob : IJob
-{
-    public async Task Run(JobInfo jobInfo, CancellationToken cancelToken)
-    {
-        var runJob = false;
-        if (jobInfo.LastRunutc == null) // job has never run
-            runJob = true;
-
-        else if (DateTime.UtcNow &gt; jobInfo.LastRunUtc.AddHours(1))
-            runJob = true;  // its been at least an hour since the last run
-
-        if (runJob)
-        {
-            ... do your job
-        }
-    }
-}
-</code></pre>
-<ol type="A" start="17">
-<li>Can I add/update job parameters inside my job for the next run</li>
-</ol>
-<blockquote>
-<p>Yes</p>
-</blockquote>
 
                                 </div>
                             <div class="col-lg-2 d-none d-lg-block bg-body pl-3 pt-3">
-                                        <div class="border-bottom mb-3">
-                                            <p class="small font-weight-bold">On This Page</p>
-                                                <p class="small"><a href="#frequently-asked-questions">Frequently Asked Questions</a></p>
-                                        </div>
-                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/jobs/faq.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
+                                    <p class="small font-weight-bold"><a href="https://github.com/shinyorg/shiny/edit/master/docs/Input/release-notes/v250.md"><i class="fad fa-pencil"></i> Edit This Page</a></p>
                             </div>
                         </div>
                     </div>
