--- a/sensors/ambientlight.html
+++ b/sensors/ambientlight.html
@@ -369,16 +369,19 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="21ec83fffb6940af91b902572cc03c3f-840777debc904fb1a02cbfb077515184" name="21ec83fffb6940af91b902572cc03c3f" class="tab" checked><label for="21ec83fffb6940af91b902572cc03c3f-840777debc904fb1a02cbfb077515184" >General</label>
-<input type="radio" id="21ec83fffb6940af91b902572cc03c3f-b00e8a5974c4468fa326aa1abc1fc4df" name="21ec83fffb6940af91b902572cc03c3f" class="tab" ><label for="21ec83fffb6940af91b902572cc03c3f-b00e8a5974c4468fa326aa1abc1fc4df" >Startup</label>
-<input type="radio" id="21ec83fffb6940af91b902572cc03c3f-95ac34942e0c47ac86499203acfc8022" name="21ec83fffb6940af91b902572cc03c3f" class="tab" ><label for="21ec83fffb6940af91b902572cc03c3f-95ac34942e0c47ac86499203acfc8022" >Android</label>
-<input type="radio" id="21ec83fffb6940af91b902572cc03c3f-5534192bfb1d4033a644f2523732e8c7" name="21ec83fffb6940af91b902572cc03c3f" class="tab" ><label for="21ec83fffb6940af91b902572cc03c3f-5534192bfb1d4033a644f2523732e8c7" >Windows</label>
+<input type="radio" id="eddc77c12abc4cb9bb0d7f8478d3d5b6-e6d83b74d2624965aacf47b7fb5205ca" name="eddc77c12abc4cb9bb0d7f8478d3d5b6" class="tab" checked><label for="eddc77c12abc4cb9bb0d7f8478d3d5b6-e6d83b74d2624965aacf47b7fb5205ca" >General</label>
+<input type="radio" id="eddc77c12abc4cb9bb0d7f8478d3d5b6-a1e4e774af0e4553bef454d977082cd0" name="eddc77c12abc4cb9bb0d7f8478d3d5b6" class="tab" ><label for="eddc77c12abc4cb9bb0d7f8478d3d5b6-a1e4e774af0e4553bef454d977082cd0" >Startup</label>
+<input type="radio" id="eddc77c12abc4cb9bb0d7f8478d3d5b6-f2d575c365e0445b8c7f495976771d5a" name="eddc77c12abc4cb9bb0d7f8478d3d5b6" class="tab" ><label for="eddc77c12abc4cb9bb0d7f8478d3d5b6-f2d575c365e0445b8c7f495976771d5a" >Android</label>
+<input type="radio" id="eddc77c12abc4cb9bb0d7f8478d3d5b6-f184ec46f7b444e98f2068d8a9641d0e" name="eddc77c12abc4cb9bb0d7f8478d3d5b6" class="tab" ><label for="eddc77c12abc4cb9bb0d7f8478d3d5b6-f184ec46f7b444e98f2068d8a9641d0e" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
