--- a/sensors/barometer.html
+++ b/sensors/barometer.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="d95b7d65431047f7b30349ecbc74e515-5b2754675ba54bce923cca8feb85c638" name="d95b7d65431047f7b30349ecbc74e515" class="tab" checked><label for="d95b7d65431047f7b30349ecbc74e515-5b2754675ba54bce923cca8feb85c638" >General</label>
-<input type="radio" id="d95b7d65431047f7b30349ecbc74e515-1d4f09bef2914d4abc3e130d70377097" name="d95b7d65431047f7b30349ecbc74e515" class="tab" ><label for="d95b7d65431047f7b30349ecbc74e515-1d4f09bef2914d4abc3e130d70377097" >Startup</label>
-<input type="radio" id="d95b7d65431047f7b30349ecbc74e515-d4ea729cc3bf44608292a7349c73924b" name="d95b7d65431047f7b30349ecbc74e515" class="tab" ><label for="d95b7d65431047f7b30349ecbc74e515-d4ea729cc3bf44608292a7349c73924b" >Android</label>
-<input type="radio" id="d95b7d65431047f7b30349ecbc74e515-3214e6b9cc654787a99b9e1da3d30c5c" name="d95b7d65431047f7b30349ecbc74e515" class="tab" ><label for="d95b7d65431047f7b30349ecbc74e515-3214e6b9cc654787a99b9e1da3d30c5c" >iOS</label>
-<input type="radio" id="d95b7d65431047f7b30349ecbc74e515-e7a513232460493a9da3d9129de35082" name="d95b7d65431047f7b30349ecbc74e515" class="tab" ><label for="d95b7d65431047f7b30349ecbc74e515-e7a513232460493a9da3d9129de35082" >Windows</label>
+<input type="radio" id="3e46e952675d48ecbee21aa9ead0a3db-e63c2fc1e166430c8be1f7dd6eee4694" name="3e46e952675d48ecbee21aa9ead0a3db" class="tab" checked><label for="3e46e952675d48ecbee21aa9ead0a3db-e63c2fc1e166430c8be1f7dd6eee4694" >General</label>
+<input type="radio" id="3e46e952675d48ecbee21aa9ead0a3db-4f8e1b803be244688eb09f1cd6cc7223" name="3e46e952675d48ecbee21aa9ead0a3db" class="tab" ><label for="3e46e952675d48ecbee21aa9ead0a3db-4f8e1b803be244688eb09f1cd6cc7223" >Startup</label>
+<input type="radio" id="3e46e952675d48ecbee21aa9ead0a3db-25650a2665ad48398343498dd3c40828" name="3e46e952675d48ecbee21aa9ead0a3db" class="tab" ><label for="3e46e952675d48ecbee21aa9ead0a3db-25650a2665ad48398343498dd3c40828" >Android</label>
+<input type="radio" id="3e46e952675d48ecbee21aa9ead0a3db-f73a1e79639f41d9b3a47da0d1c377ed" name="3e46e952675d48ecbee21aa9ead0a3db" class="tab" ><label for="3e46e952675d48ecbee21aa9ead0a3db-f73a1e79639f41d9b3a47da0d1c377ed" >iOS</label>
+<input type="radio" id="3e46e952675d48ecbee21aa9ead0a3db-171164c6a3dd4fd49074eacb8f8e008c" name="3e46e952675d48ecbee21aa9ead0a3db" class="tab" ><label for="3e46e952675d48ecbee21aa9ead0a3db-171164c6a3dd4fd49074eacb8f8e008c" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
