--- a/sensors/pedometer.html
+++ b/sensors/pedometer.html
@@ -369,17 +369,20 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
                                 <div class="col-md-9 col-lg-8 pt-4 pt-md-0 pb-4 px-4" style="overflow-y: auto">
                                     <div class="tab-wrap">
-<input type="radio" id="64ca6fe958c942759f592dbba4e71eaa-2acdf5dbb1644749b151d08087080e40" name="64ca6fe958c942759f592dbba4e71eaa" class="tab" checked><label for="64ca6fe958c942759f592dbba4e71eaa-2acdf5dbb1644749b151d08087080e40" >General</label>
-<input type="radio" id="64ca6fe958c942759f592dbba4e71eaa-372569eb50004c5394fdac55431b00bc" name="64ca6fe958c942759f592dbba4e71eaa" class="tab" ><label for="64ca6fe958c942759f592dbba4e71eaa-372569eb50004c5394fdac55431b00bc" >Startup</label>
-<input type="radio" id="64ca6fe958c942759f592dbba4e71eaa-8524141dc5b24ea3834e35dcde2cd8e5" name="64ca6fe958c942759f592dbba4e71eaa" class="tab" ><label for="64ca6fe958c942759f592dbba4e71eaa-8524141dc5b24ea3834e35dcde2cd8e5" >Android</label>
-<input type="radio" id="64ca6fe958c942759f592dbba4e71eaa-8f2583d96b384d8a979ab55a4a0ca562" name="64ca6fe958c942759f592dbba4e71eaa" class="tab" ><label for="64ca6fe958c942759f592dbba4e71eaa-8f2583d96b384d8a979ab55a4a0ca562" >iOS</label>
-<input type="radio" id="64ca6fe958c942759f592dbba4e71eaa-458d151508ad41198d6ab2bf9325147b" name="64ca6fe958c942759f592dbba4e71eaa" class="tab" ><label for="64ca6fe958c942759f592dbba4e71eaa-458d151508ad41198d6ab2bf9325147b" >Windows</label>
+<input type="radio" id="b538ecfe03dd4be6b759e23bd882c203-47863ba2dc7641adb777d9432fd1c6a0" name="b538ecfe03dd4be6b759e23bd882c203" class="tab" checked><label for="b538ecfe03dd4be6b759e23bd882c203-47863ba2dc7641adb777d9432fd1c6a0" >General</label>
+<input type="radio" id="b538ecfe03dd4be6b759e23bd882c203-219fb28ef9ba4a219586e199f4115546" name="b538ecfe03dd4be6b759e23bd882c203" class="tab" ><label for="b538ecfe03dd4be6b759e23bd882c203-219fb28ef9ba4a219586e199f4115546" >Startup</label>
+<input type="radio" id="b538ecfe03dd4be6b759e23bd882c203-df0b917987784496a62f0f65f4572f39" name="b538ecfe03dd4be6b759e23bd882c203" class="tab" ><label for="b538ecfe03dd4be6b759e23bd882c203-df0b917987784496a62f0f65f4572f39" >Android</label>
+<input type="radio" id="b538ecfe03dd4be6b759e23bd882c203-b784db693dd7405c9d6a9f0b04838cfe" name="b538ecfe03dd4be6b759e23bd882c203" class="tab" ><label for="b538ecfe03dd4be6b759e23bd882c203-b784db693dd7405c9d6a9f0b04838cfe" >iOS</label>
+<input type="radio" id="b538ecfe03dd4be6b759e23bd882c203-11053e4df781421d9d4311aebeee70e5" name="b538ecfe03dd4be6b759e23bd882c203" class="tab" ><label for="b538ecfe03dd4be6b759e23bd882c203-11053e4df781421d9d4311aebeee70e5" >Windows</label>
 <div class="tab__content">
 <p>|Area|Info|
 |---|---|
