--- a/setup/uwp.html
+++ b/setup/uwp.html
@@ -369,7 +369,10 @@
                                                             <a href="/release-notes/v242">2.4.2</a>
                                                         </div>
                                                         <div class="sidebar-nav-child">
-                                                            <a href="/release-notes/v243">2.4.3 (Preview)</a>
+                                                            <a href="/release-notes/v243">2.4.3</a>
+                                                        </div>
+                                                        <div class="sidebar-nav-child">
+                                                            <a href="/release-notes/v250">2.5.0 (Preview)</a>
                                                         </div>
                                                 </div>
                                 </div>
@@ -381,11 +384,11 @@
 <img src="images/uwp_runtime_proj.png" width="550" />
 <ol start="2">
 <li>Add <div class="tab-wrap">
-<input type="radio" id="8467f123995d45bf9c58e17dafe27e04-20f5150738f94453b2b5e6a99828a4dd" name="8467f123995d45bf9c58e17dafe27e04" class="tab" checked><label for="8467f123995d45bf9c58e17dafe27e04-20f5150738f94453b2b5e6a99828a4dd" >General</label>
-<input type="radio" id="8467f123995d45bf9c58e17dafe27e04-cac2248d4e0d4f9a9e7a0dee65d99a0a" name="8467f123995d45bf9c58e17dafe27e04" class="tab" ><label for="8467f123995d45bf9c58e17dafe27e04-cac2248d4e0d4f9a9e7a0dee65d99a0a" >Startup</label>
-<input type="radio" id="8467f123995d45bf9c58e17dafe27e04-79aeb4c110f64ab3a9ca9c9d5eb2946e" name="8467f123995d45bf9c58e17dafe27e04" class="tab" ><label for="8467f123995d45bf9c58e17dafe27e04-79aeb4c110f64ab3a9ca9c9d5eb2946e" >Android</label>
-<input type="radio" id="8467f123995d45bf9c58e17dafe27e04-cf6fa6aa4ad6463da26d5cf30ca75349" name="8467f123995d45bf9c58e17dafe27e04" class="tab" ><label for="8467f123995d45bf9c58e17dafe27e04-cf6fa6aa4ad6463da26d5cf30ca75349" >iOS</label>
-<input type="radio" id="8467f123995d45bf9c58e17dafe27e04-9701a6e5c6b84cb88c91fe05dd4eaf35" name="8467f123995d45bf9c58e17dafe27e04" class="tab" ><label for="8467f123995d45bf9c58e17dafe27e04-9701a6e5c6b84cb88c91fe05dd4eaf35" >Windows</label></li>
+<input type="radio" id="67b56dfa9e46469296a087b24200d2aa-71d71bf982694ebaa676277763c43a25" name="67b56dfa9e46469296a087b24200d2aa" class="tab" checked><label for="67b56dfa9e46469296a087b24200d2aa-71d71bf982694ebaa676277763c43a25" >General</label>
+<input type="radio" id="67b56dfa9e46469296a087b24200d2aa-04a59750429a4effaf7cff7cdbd7bd71" name="67b56dfa9e46469296a087b24200d2aa" class="tab" ><label for="67b56dfa9e46469296a087b24200d2aa-04a59750429a4effaf7cff7cdbd7bd71" >Startup</label>
+<input type="radio" id="67b56dfa9e46469296a087b24200d2aa-b965d51c1f3e42969cad10781ce352f0" name="67b56dfa9e46469296a087b24200d2aa" class="tab" ><label for="67b56dfa9e46469296a087b24200d2aa-b965d51c1f3e42969cad10781ce352f0" >Android</label>
+<input type="radio" id="67b56dfa9e46469296a087b24200d2aa-8ff23adddc6b4d9686cbeeb7ace3ee44" name="67b56dfa9e46469296a087b24200d2aa" class="tab" ><label for="67b56dfa9e46469296a087b24200d2aa-8ff23adddc6b4d9686cbeeb7ace3ee44" >iOS</label>
+<input type="radio" id="67b56dfa9e46469296a087b24200d2aa-70dfd4103fa149539b792a5b26b283ae" name="67b56dfa9e46469296a087b24200d2aa" class="tab" ><label for="67b56dfa9e46469296a087b24200d2aa-70dfd4103fa149539b792a5b26b283ae" >Windows</label></li>
 </ol>
 <div class="tab__content">
 <p>|Area|Info|
